// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TileContent /> should render a tile content button with a font awesome icon 1`] = `
<styled.div>
  <styled.div>
    <Styled(FontAwesomeIcon)
      color="#7362F5"
      size="xlarge"
      type="star"
    />
    <styled.div>
      <Styled(Text)
        color="#424F5C"
        type="body"
      >
        dummy button title
      </Styled(Text)>
      <Styled(Text)
        color="#667380"
        type="small"
      >
        dummy button description
      </Styled(Text)>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<TileContent /> should render a tile content button with an IntelliIcon 1`] = `
<styled.div>
  <styled.div>
    <Styled(IntelliIcon)
      color="#7362F5"
      size="xlarge"
      type="smile"
    />
    <styled.div>
      <Styled(Text)
        color="#424F5C"
        type="body"
      >
        dummy button title
      </Styled(Text)>
      <Styled(Text)
        color="#667380"
        type="small"
      >
        dummy button description
      </Styled(Text)>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<TileContent /> should render a tile content with headings 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <Styled(Text)
        color="#F25749"
        isUpper={true}
        textWidth={46}
        type="display-large"
      >
        1
      </Styled(Text)>
      <Styled(Text)
        color="#F25749"
        isUpper={true}
        type="heading"
      >
        dummy heading
      </Styled(Text)>
    </styled.div>
    <styled.div>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        textWidth={46}
        type="display"
      >
        35
      </Styled(Text)>
      <Styled(Text)
        color="#262D33"
        isUpper={true}
        type="small"
      >
        dummy subheading
      </Styled(Text)>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<TileContent /> should render a tile content with label 1`] = `
<styled.div>
  <styled.label>
    dummy label
  </styled.label>
  <styled.div
    hasTitleLabel={true}
  >
    <div />
  </styled.div>
</styled.div>
`;

exports[`<TileContent /> should render a tile content with nothing 1`] = `
<styled.div>
  <styled.div
    hasTitleLabel={false}
  >
    <div />
  </styled.div>
</styled.div>
`;
